# fullstack-test-task

./: .env.dev  .gitignore  README.md  docker-compose.yml
backend/: pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0d6439d2e79f_init.py
backend/src/: app.py  service.py  tasks.py
backend/src/api/routes/: alerts.py  files.py
backend/src/application/use_cases/: process_file.py  upload_file.py
backend/src/core/: config.py  database.py  env.py  exceptions.py
backend/src/domain/: enums.py
backend/src/infrastructure/: repositories.py
backend/src/infrastructure/db/: models.py  session.py  uow.py
backend/src/infrastructure/queue/: celery_app.py
backend/src/infrastructure/storage/: local_storage.py
backend/src/workers/: tasks.py
frontend/: Dockerfile
frontend/src/app/: layout.tsx  page.tsx
frontend/src/features/alerts/: index.ts
frontend/src/features/alerts/data/: alertsApi.ts
frontend/src/features/alerts/domain/: presentation.ts  types.ts
frontend/src/features/alerts/ui/: AlertsTable.tsx
frontend/src/features/dashboard/: index.ts
frontend/src/features/dashboard/ui/: useDashboardPage.ts
frontend/src/features/files/: index.ts
frontend/src/features/files/data/: filesApi.ts
frontend/src/features/files/domain/: presentation.ts  types.ts  validation.ts
frontend/src/features/files/ui/: FilesTable.tsx  UploadFileModal.tsx
frontend/src/shared/api/: config.ts
frontend/src/shared/lib/: formatters.ts
