[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.30.0",
    "celery[redis]>=5.6.3",
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
]

[tool.ruff]
target-version = "py312"
line-length = 90
indent-width = 4
src = ["src"]

[tool.ruff.lint]
preview = true
select = [
    "UP",
    "I",
    "E",
    "W",
    "F",
    "B",
    "C4",
    "S",
    "BLE",
    "T20",
    "T10",
    "PT",
    "RUF",
    "DTZ",
    "ERA",
    "FURB",
]
ignore = [
    "C408",
    "RUF001",
    "RUF002",
    "RUF003",
    "S110",
    "BLE001",
]
exclude = [
]
fixable = ["I"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101", "S106"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.flake8-bandit]
check-typed-exception = true

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true
